Update example css to make it clearer where row margin is and what is gutter.

--- a/example.html
+++ b/example.html
@@ -16,6 +16,7 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 	-->
 </head>
 <body>
+	<h1>Yet Another Grid System (YAGS) example</h1>
 	<div class="block-group">
 		<!-- Main Body -->
 		<div id="one" class="block">
