Add option to row() to have a left/right margin (or not) Reworked example code somewhat

--- a/example.html
+++ b/example.html
@@ -19,168 +19,157 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 	<h1>Yet Another Grid System (YAGS) example</h1>
 	<div class="block-group">
 		<!-- Main Body -->
-		<div id="one" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>1</p>
 			</article>
 		</div>
 
-		<div id="two" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>2</p>
 			</article>
 		</div>
 
-		<div id="three" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>3</p>
 			</article>
 		</div>
 
-		<div id="four" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>4</p>
 			</article>
 		</div>
 
-		<div id="five" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>5</p>
 			</article>
 		</div>
 
-		<div id="six" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>6</p>
 			</article>
 		</div>
 
-		<div id="seven" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>7</p>
 			</article>
 		</div>
 
-		<div id="eight" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>8</p>
 			</article>
 		</div>
 
-		<div id="nine" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>9</p>
 			</article>
 		</div>
 
-		<div id="ten" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>10</p>
 			</article>
 		</div>
 
-		<div id="eleven" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>11</p>
 			</article>
 		</div>
 
-		<div id="twelve" class="block">
+		<div class="block block-small">
 			<article class="block-inner">
 				<p>12</p>
 			</article>
 		</div>
 
-		<div id="thirteen" class="block">
+		<div class="block block-medium">
 			<article class="block-inner">
-				<p>13 (2 col, 1 mobile)</p>
+				<p>13 (4 col, 2 mobile)</p>
 			</article>
 		</div>
 
-		<div id="fourteen" class="block">
+		<div class="block block-medium">
 			<article class="block-inner">
-				<p>14 (3 col, 2 mobile)</p>
+				<p>14 (4 col, 2 mobile)</p>
 			</article>
 		</div>
 
-		<div id="fifteen" class="block">
+		<div class="block block-medium">
 			<article class="block-inner">
 				<p>15 (4 col, 2 mobile)</p>
 			</article>
 		</div>
 
-		<div id="sixteen" class="block">
+		<div id="block-sixteen" class="block block-medium">
 			<article class="block-inner">
-				<p>16 (3 col, 1 mobile)</p>
+				<p>16 (4 col, 2 mobile) bleed left only</p>
 			</article>
 		</div>
 
-		<div id="seventeen" class="block">
+		<div id="block-seventeen" class="block block-medium">
 			<article class="block-inner">
-				<p>17 (2 col, 1 mobile) bleed right only</p>
+				<p>17 (4 col, 2 mobile) bleed left and right</p>
 			</article>
 		</div>
 
-		<div id="eighteen" class="block">
+		<div id="block-eighteen" class="block block-medium">
 			<article class="block-inner">
-				<p>18 (3 col, 1 mobile) bleed</p>
+				<p>18 (4 col, 2 mobile) bleed right only</p>
 			</article>
 		</div>
 
-		<div id="nineteen" class="block">
+		<div class="block block-large">
 			<article class="block-inner">
-				<p>19 (4 col, 3 mobile) bleed</p>
+				<p>19 (6 col desktop, 12 tablet, 6 mobile)</p>
 			</article>
 		</div>
 
-		<div id="twenty" class="block">
+		<div class="block block-large">
 			<article class="block-inner">
-				<p>20 (3 col, 1 mobile) bleed left only</p>
+				<p>20 (6 col desktop, 12 tablet, 6 mobile)</p>
 			</article>
 		</div>
 
-		<div id="twentyone" class="block">
+		<div class="block block-medium">
 			<article class="block-inner">
-				<p>21 (12 col, 6 mobile) bleed</p>
+				<p>21 (4 col, 2 mobile)</p>
 			</article>
 		</div>
 
-		<div id="twentytwo" class="block">
+		<div id="block-twentytwo" class="block">
 			<article class="block-inner">
-				<p>22</p>
+				<p>22 (2 col, 1 mobile; offset right 2 desktop, offset right 1 tablet, offset right 1 mobile)</p>
 			</article>
 		</div>
 
-		<div id="twentythree" class="block">
+		<div class="block block-medium">
 			<article class="block-inner">
-				<p>23</p>
+				<p>23 (4 col, 2 mobile)</p>
 			</article>
 		</div>
 
-		<div id="twentyfour" class="block">
+		<div class="block block-xlarge">
 			<article class="block-inner">
-				<p>24 (offset right 2)</p>
+				<p>24 (full row, full bleed: 12 col desktop, 12 col tablet, 6 col mobile)</p>
 			</article>
 		</div>
 
-		<div id="twentyfive" class="block">
+	</div>
+	<div id="container-two">
+		<div id="block-twentyfour" class="block block-xlarge">
 			<article class="block-inner">
-				<p>25</p>
+				<p>24 (full row, full bleed, container margin)</p>
 			</article>
 		</div>
-
-		<div id="twentysix" class="block">
-			<article class="block-inner">
-				<p>26 (offset left 3)</p>
-			</article>
-		</div>
-
-		<div id="twentyseven" class="block">
-			<article class="block-inner">
-				<p>27</p>
-			</article>
-		</div>
-
 	</div>
 	
 </body>
