Add support for push/pull to switch column order Tidy up of README

--- a/example.html
+++ b/example.html
@@ -157,17 +157,35 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 			</article>
 		</div>
 
+		<div class="block block-medium">
+			<article class="block-inner">
+				<p>24 (4 col, 2 mobile)</p>
+			</article>
+		</div>
+
+		<div id="block-twentyfive" class="block block-medium">
+			<article class="block-inner">
+				<p>25 (push 4 col desktop/tablet, push 2 mobile)</p>
+			</article>
+		</div>
+
+		<div id="block-twentysix" class="block block-medium">
+			<article class="block-inner">
+				<p>26 (pull 4 col desktop/tablet, pull 2 mobile)</p>
+			</article>
+		</div>
+
 		<div class="block block-xlarge">
 			<article class="block-inner">
-				<p>24 (full row, full bleed: 12 col desktop, 12 col tablet, 6 col mobile)</p>
+				<p>27 (full row, full bleed: 12 col desktop, 12 col tablet, 6 col mobile)</p>
 			</article>
 		</div>
 
 	</div>
 	<div id="container-two">
-		<div id="block-twentyfour" class="block block-xlarge">
+		<div class="block block-xlarge">
 			<article class="block-inner">
-				<p>24 (full row, full bleed, container margin)</p>
+				<p>28 (full row, full bleed, container margin)</p>
 			</article>
 		</div>
 	</div>
