Add grid overlay with transparency to clearly illustrate the grid

--- a/example.html
+++ b/example.html
@@ -188,7 +188,57 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 				<p>28 (full row, full bleed, container margin)</p>
 			</article>
 		</div>
-	</div>
-	
-</body>
+	</div>	
+
+	<!-- Show a grid over lay (transparent) -->
+	<div class="grid-overlay">
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+		<div class="overlay-col">
+			<div class="inner">
+			</div>
+		</div>
+	</div><!-- grid-overlay --></body>
 </html>
