--- a/example.html
+++ b/example.html
@@ -183,23 +183,23 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 	<h2>Grid from HTML (CSS classes directly)</h2>
 	<div id="from-html" class="row">
 		<div class="col col-6-desktop col-5-tablet col-3-mobile">
-			<div class="col-inner">
+			<div class="col-gutter">
 				<p>HTML1 (6 col desktop, 5 col tablet, 3 col mobile)</p>
 			</div>
 		</div>
 		<div class="col col-6-desktop col-5-tablet col-3-mobile">
-			<div class="col-inner">
+			<div class="col-gutter">
 				<p>HTML2 (6 col desktop, 5 col tablet, 3 col mobile)</p>
 			</div>
 		</div>
 		<div class="col col-6-desktop col-5-tablet col-3-mobile">
-			<div class="col-inner">
-				<p>HTML1 (6 col desktop, 5 col tablet, 3 col mobile, bleed)</p>
+			<div class="col-gutter bleed-left bleed-right">
+				<p>HTML3 (6 col desktop, 5 col tablet, 3 col mobile, bleed)</p>
 			</div>
 		</div>
 		<div class="col col-6-desktop col-5-tablet col-3-mobile">
-			<div class="col-inner">
-				<p>HTML2 (6 col desktop, 5 col tablet, 3 col mobile, bleed)</p>
+			<div class="col-gutter bleed-left bleed-right">
+				<p>HTML4 (6 col desktop, 5 col tablet, 3 col mobile, bleed)</p>
 			</div>
 		</div>
 	</div>
