Complete adding push/pull for non-semantic use (i.e. in HTML rather than SASS)

--- a/example.html
+++ b/example.html
@@ -202,6 +202,16 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 				<p>HTML4 (6 col desktop, 5 col tablet, 3 col mobile, bleed)</p>
 			</div>
 		</div>
+		<div class="col col-6-desktop col-push-6-desktop col-6-tablet col-push-6-tablet col-3-mobile col-push-3-mobile">
+			<div class="col-gutter">
+				<p>HTML5 (6 col desktop, 5 col tablet, 3 col mobile, push)</p>
+			</div>
+		</div>
+		<div class="col col-6-desktop col-pull-6-desktop col-6-tablet col-pull-6-tablet col-3-mobile col-pull-3-mobile">
+			<div class="col-gutter">
+				<p>HTML6 (6 col desktop, 5 col tablet, 3 col mobile, pull)</p>
+			</div>
+		</div>
 	</div>
 	<!-- Show a grid over lay (transparent) -->
 	<div class="grid-overlay">
