Add back option of having row margin, so grid gutters and margin can be made the same.

--- a/example.html
+++ b/example.html
@@ -172,14 +172,16 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 				<p>26 (pull 4 col desktop/tablet, pull 2 mobile)</p>
 			</article>
 		</div>
+	</div>
 
+	<div class="block-group-no-gutter">
 		<div class="block block-xlarge">
 			<article class="block-inner">
-				<p>27 (full row, full bleed: 12 col desktop, 12 col tablet, 6 col mobile)</p>
+				<p>27 (row with no gutter, full bleed)</p>
 			</article>
 		</div>
-
 	</div>
+
 	<h2>Grid from HTML (CSS classes directly)</h2>
 	<div id="from-html" class="row">
 		<div class="col col-6-desktop col-5-tablet col-3-mobile">
@@ -215,53 +217,56 @@ Note that my use of lots of IDs here isn't a suggestion that you should use so m
 	</div>
 	<!-- Show a grid over lay (transparent) -->
 	<div class="grid-overlay">
-		<div class="overlay-col">
-			<div class="inner">
+		<div class="grid-overlay-row">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-		<div class="overlay-col">
-			<div class="inner">
+			<div class="overlay-col">
+				<div class="inner">
+				</div>
 			</div>
-		</div>
-	</div><!-- grid-overlay --></body>
+		</div><!-- grid-overlay-row -->
+	</div><!-- grid-overlay -->
+</body>
 </html>
